# scadpy

./: .gitmodules  .prototools  LICENSE  README.md  pyproject.toml
scadpy/emt_connector/: emt_connector.py
scadpy/mortise_dowel_clamping_template/: README.md  mortise_dowel_clamping_template.3mf  mortise_dowel_clamping_template.json  mortise_dowel_clamping_template.py  mortise_dowel_clamping_template.scad
scadpy/slide_labels/: README.md  labels_config.yaml  slide_labels.py
scadpy/sliderhinge/: hinge.stl  sliderhinge.scad
