[tool.poetry]
name = "scadpy"
version = "0.1.0"
description = ""
authors = ["Lewis Collum <lewiscollum4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
solidpython2 = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
